# SingleApplication

./: CMakeLists.txt  LICENSE  README.md  singleapplication.cpp  singleapplication.h  singleapplication.rc  singleapplication_global.h  singleapplication_p.cpp  singleapplication_p.h
